# non-rigid

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements-gpu.txt
.github/workflows/: build-site.yaml  run-tests.yaml
configs/: _logging.yaml  eval.yaml  eval_policy.yaml  real_world.yaml  train.yaml
configs/commands/_base/: train_cross_flow_absolute.yaml  train_cross_flow_relative.yaml  train_cross_point_absolute.yaml  train_cross_point_relative.yaml  train_regression_flow.yaml  train_regression_point.yaml  (+2 more)
configs/dataset/: hoi4d.yaml  microwave_flow.yaml  microwave_multi.yaml  microwave_multi_revolute_flow.yaml  microwave_uniform.yaml  multi_revolute_prismatic_flow.yaml  ndf_point.yaml  pc_multi_cloth.yaml  pc_multi_cloth_point.yaml  pc_single_cloth_multi_anchor.yaml  pc_single_cloth_multi_anchor_point.yaml  point_overfit.yaml  proc_cloth.yaml  proc_cloth_overfit.yaml  rigid_flow.yaml  rigid_point.yaml  rpdiff_point.yaml
configs/inference/: ndf_point_df_point_cross.yaml  pc_single_cloth_multi_anchor_df_base.yaml  pc_single_cloth_multi_anchor_df_flow_cross.yaml  proc_cloth_df_base.yaml  proc_cloth_overfit_df_base.yaml  rigid_flow_df_flow_cross.yaml
configs/model/: df_base.yaml  df_cross.yaml  df_flow_cross.yaml  df_point.yaml  df_point_cross.yaml  linear.yaml  regression.yaml
configs/training/: hoi4d_df_cross.yaml  microwave_flow_df_base.yaml  microwave_multi_df_base.yaml  microwave_uniform_df_base.yaml  ndf_point_df_point_cross.yaml  pc_single_cloth_multi_anchor_df_base.yaml  pc_single_cloth_multi_anchor_point_df_point_cross.yaml  point_overfit_df_point.yaml  rigid_flow_df_flow_cross.yaml  rpdiff_point_df_point_cross.yaml
docs/: mkdocs.yml
scripts/: eval.py  eval.sh  eval_cloth.py  eval_diff.py  eval_legacy.sh  eval_policy.py  eval_policy.sh  eval_proc_cloth_policy.py  eval_rigid.py  generate_flow_demos.py  generate_microwave_flow_demos.py  generate_multi_general_flow_demos.py  generate_multi_microwave_flow_demos.py  multi_cloth_eval.sh  multi_cloth_eval_policy.sh  multi_cloth_train.sh  multi_cloth_vis.sh  multi_cloth_vis_policy.sh  tax3d_real_world.py  train.py  train.sh  train_diff.py  vis_cloth.py  vis_proc_cloth_policy.py
tests/: train_test.py
(+532 files in other folders)
