[project]
name = "non_rigid"
version = "0.1.0"
description = "TAX3D: Non-Rigid Relative Placement through Dense Diffusion"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE.txt" }
authors = [
  { email = "eycai@andrew.cmu.edu", name = "Eric Cai" },
  { email = "oadonca@andrew.cmu.edu", name = "Octavian Donca" },
  { email = "baeisner@andrew.cmu.edu", name = "Ben Eisner" },
  { email = "dheld@andrew.cmu.edu", name = "Dave Held" },
]
dependencies = [
  "diffusers == 0.26.3",
  "gif",
  "hydra-core == 1.3.2",
  # "lightning == 2.0.3",
  "lightning",
  "torch",
  "torch_cluster",
  "torch-geometric",
  "torch_scatter",
  "torch_sparse",
  "torch_spline_conv",
  "numpy",
  "omegaconf == 2.3.0",
  "pandas",
  "rpad-pyg @ git+https://github.com/r-pad/pyg_libs.git",
  "rpad-visualize-3d @ git+https://github.com/r-pad/visualize_3d.git",
  "shapely == 2.0.2",
  "timm == 0.9.12",
  "torchmetrics",
  "wandb == 0.15.4",
  # the following are for DP3
  "zarr == 2.12.0",
  "dm_control",
  "flask",
  "dill == 0.3.5.1",
  "einops == 0.4.1",
  "numba == 0.56.4",
  "gym == 0.21.0",
]


[build-system]
requires = ["setuptools >= 62.3.2", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
develop = [
  "autoflake == 2.1.1",
  "black == 23.3.0",
  "isort == 5.12.0",
  "mypy == 1.3.0",
  "pandas-stubs == 2.0.2.230605",
  "pylint == 2.17.4",
  "pytest == 7.3.2",
  "pre-commit == 3.3.3",
]
notebooks = ["jupyter"]
build_docs = ["mkdocs-material", "mkdocstrings[python]"]

# This is required to allow us to have notebooks/ at the top level.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
non_rigid = ["py.typed"]

[tool.isort]
profile = "black"
known_third_party = "wandb"

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["torchvision.*"]
ignore_missing_imports = true

[tool.pylint]
known-third-party = "wandb"

[tool.pylint.TYPECHECK]
generated-members = 'torch.*'
